--- a/.github/workflows/spigot.yml
+++ b/.github/workflows/spigot.yml
@@ -63,6 +63,6 @@ jobs:
         uses: ncipollo/release-action@v1.10.0
         with:
           artifacts: spigot/build/libs/spigot-${{ steps.version.outputs.value }}.jar,spigot/build/libs/spigot-${{ steps.version.outputs.value }}-sources.jar,spigot/build/libs/spigot-${{ steps.version.outputs.value }}-javadoc.jar
-          name: Version ${{ steps.version.outputs.value }} (${{ steps.protocol.outputs.value }})
+          name: Version ${{ steps.version.outputs.value }}
           tag: v${{ steps.version.outputs.value }}-spigot
           generateReleaseNotes: true
