--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,16 @@ def minor = '0'
 
 
 def getLatestTag = new JsonSlurper().parse(new URL("https://api.github.com/repos/CyberedCake/CyberAPI/releases/latest")).tag_name
+def differentMinorVersions = false
 
 def currentPatch = {
     String tagSplit = getLatestTag.split("\\.")[2].split("-")[0]
     try {
+        if(getLatestTag.split("\\.")[1].split("-")[0] != minor) {
+            logger.quiet "> Found different minor versions, settings patch to '0'..."
+            differentMinorVersions = true
+            return 0
+        }
         return Integer.parseInt(tagSplit)
     } catch (NumberFormatException ignored) { return 0 }
 }
@@ -47,7 +53,7 @@ def setBasic = {
         build = currentBuild()
         String username = System.getProperty("user.name")
         if(username == "runner") { // check if github is building the plugin
-            patch = patch+1
+            if(!differentMinorVersions) patch = patch+1
             build = build+1
             println '> Found using GitHub Runner, going to increment patch (' + String.valueOf(patch-1) + ' -> ' + String.valueOf(patch) + ') and build (' + String.valueOf(build-1) + ' -> ' + String.valueOf(patch) + ')'
         }
