--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -1,5 +1,6 @@
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
@@ -11,6 +12,7 @@ repositories {
     maven {
         url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
     }
+    maven { url "https://repo.dmulloy2.net/repository/public/" }
 }
 
 dependencies {
@@ -18,8 +20,9 @@ dependencies {
     compileOnly "net.kyori:adventure-api:4.11.0"
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.11.0"
     compileOnly "net.kyori:adventure-text-minimessage:4.11.0"
+    compileOnly "com.comphenix.protocol:ProtocolLib:4.8.0";
 
     // spigot and plugin hooks
-    compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
 }
