--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -23,6 +23,6 @@ dependencies {
     compileOnly "com.comphenix.protocol:ProtocolLib:4.8.0";
 
     // spigot and plugin hooks
-    compileOnly 'org.spigotmc:spigot:1.19-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
 }
