--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -25,4 +25,10 @@ dependencies {
     // spigot and plugin hooks
     compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
+
+    // utils
+    implementation 'org.reflections:reflections:0.10.2'
+
+    compileOnly 'org.apache.logging.log4j:log4j-api:2.17.2'
+    compileOnly 'org.apache.logging.log4j:log4j-core:2.17.2'
 }
