--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -7,5 +7,14 @@ repositories {
 }
 
 dependencies {
+    // bungeecord and plugin hooks
     compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
+    compileOnly 'net.luckperms:api:5.4'
+
+    // log4j
+    compileOnly 'org.apache.logging.log4j:log4j-api:2.17.2'
+    compileOnly 'org.apache.logging.log4j:log4j-core:2.17.2'
+
+    // utils
+    implementation 'org.reflections:reflections:0.10.2'
 }
