--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -20,15 +20,16 @@ dependencies {
     compileOnly "net.kyori:adventure-api:4.11.0"
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.11.0"
     compileOnly "net.kyori:adventure-text-minimessage:4.11.0"
-    compileOnly "com.comphenix.protocol:ProtocolLib:4.8.0";
 
     // spigot and plugin hooks
+    compileOnly "com.comphenix.protocol:ProtocolLib:4.8.0"
     compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
 
-    // utils
-    implementation 'org.reflections:reflections:0.10.2'
-
+    // log4j
     compileOnly 'org.apache.logging.log4j:log4j-api:2.17.2'
     compileOnly 'org.apache.logging.log4j:log4j-core:2.17.2'
+
+    // utils
+    implementation 'org.reflections:reflections:0.10.2'
 }
