--- a/build.gradle
+++ b/build.gradle
@@ -181,6 +181,16 @@ subprojects { Project subProject ->
         }
     }
 
+    jar {
+        tasks.withType(Javadoc) {
+            options.addStringOption("Xdoclint:none", '-quiet')
+        }
+        from (this.getBuildDir().getAbsolutePath() + File.separator + getProject().getName() + "-build.properties")
+        manifest {
+            attributes 'fullVersion': fullVersion.toString()
+        }
+    }
+
     classes {
         dependsOn createProperties
     }
