--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -18,3 +18,9 @@ dependencies {
     // utils
     implementation 'org.reflections:reflections:0.10.2'
 }
+
+shadowJar {
+    relocate 'javassist', 'net.cybercake.cyberapi.dependencies.javassist'
+    relocate 'javax.annotation', 'net.cybercake.cyberapi.dependencies.annotations'
+    relocate 'org.reflections', 'net.cybercake.cyberapi.dependencies.reflections'
+}
