[ci skip] Undo previous change, go back to 'build' instead of 'shadowJar'

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,4 +2,4 @@ jdk:
     - openjdk17
 install:
     - echo "Building the plugin"
-    - ./gradlew clean shadowJar --stacktrace
+    - ./gradlew build --stacktrace
