--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,8 +3,8 @@ repositories {
 }
 
 dependencies {
-
-implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 shadowJar {
