--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,14 @@
 repositories {
-
+    mavenCentral()
+    mavenLocal()
+    maven {
+        name = 'sonatype'
+        url = 'https://oss.sonatype.org/content/groups/public/'
+    }
+    maven {
+        name = 'spigotmc-repo'
+        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+    }
 }
 
 dependencies {
