--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -4,6 +4,10 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+    maven {
+        name = 'exceptionflug'
+        url = 'https://mvn.exceptionflug.de/repository/exceptionflug-public/'
+    }
 }
 
 dependencies {
@@ -13,13 +17,19 @@ dependencies {
     // bungeecord and plugin hooks
     compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
+    compileOnly 'dev.simplix:protocolize-api:2.2.1'
 
     // utils
     implementation 'org.reflections:reflections:0.10.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 shadowJar {
     relocate 'javassist', 'net.cybercake.cyberapi.dependencies.javassist'
-    relocate 'javax.annotation', 'net.cybercake.cyberapi.dependencies.annotations'
     relocate 'org.reflections', 'net.cybercake.cyberapi.dependencies.reflections'
+    relocate 'com.google.gson', 'net.cybercake.cyberapi.dependencies.google.gson'
+    relocate 'org.apache.commons.lang3', 'net.cybercake.cyberapi.dependencies.apache.commons'
+    relocate 'org.intellij.lang.annotations', 'net.cybercake.cyberapi.dependencies.annotations.intellij'
+    relocate 'org.jetbrains.annotations', 'net.cybercake.cyberapi.dependencies.annotations.jetbrains'
+    relocate 'javax.annotation', 'net.cybercake.cyberapi.dependencies.annotations.javax'
 }
