--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -31,10 +31,15 @@ dependencies {
 
     // utils
     implementation 'org.reflections:reflections:0.10.2'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 shadowJar {
     relocate 'javassist', 'net.cybercake.cyberapi.dependencies.javassist'
-    relocate 'javax.annotation', 'net.cybercake.cyberapi.dependencies.annotations'
     relocate 'org.reflections', 'net.cybercake.cyberapi.dependencies.reflections'
+    relocate 'org.apache.commons.lang3', 'net.cybercake.cyberapi.dependencies.apache.commons'
+    relocate 'com.google.gson', 'net.cybercake.cyberapi.dependencies.google.gson'
+    relocate 'org.intellij.lang.annotations', 'net.cybercake.cyberapi.dependencies.annotations.intellij'
+    relocate 'org.jetbrains.annotations', 'net.cybercake.cyberapi.dependencies.annotations.jetbrains'
+    relocate 'javax.annotation', 'net.cybercake.cyberapi.dependencies.annotations.javax'
 }
