--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -11,6 +11,9 @@ repositories {
 }
 
 dependencies {
+    // cyberapi
+    implementation project(':common')
+
     // bungeecord and plugin hooks
     compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
