--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,6 +12,9 @@ repositories {
 }
 
 dependencies {
+    // cyberapi
+    implementation project(':common')
+
     // servers
     compileOnly 'net.md-5:bungeecord-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
