--- a/build.gradle
+++ b/build.gradle
@@ -143,7 +143,8 @@ subprojects { Project subProject ->
             tags(
                     'apiNote:a"API Note:"',
                     'implNote:b"Implementation Note:"',
-                    'website:c"Website:"'
+                    'website:c"Website:"',
+                    'author:d"Author:"'
             )
         }
     }
@@ -168,7 +169,8 @@ subprojects { Project subProject ->
             maven(MavenPublication) {
                 groupId project.group
                 artifactId project.name
-                version project.version
+                version build
+
                 from components.java
             }
         }
