--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -13,6 +13,7 @@ repositories {
         url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
     }
     maven { url "https://repo.dmulloy2.net/repository/public/" }
+    maven { url "https://libraries.minecraft.net" }
 }
 
 dependencies {
@@ -23,6 +24,9 @@ dependencies {
     compileOnly "net.kyori:adventure-api:4.11.0"
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.11.0"
     compileOnly "net.kyori:adventure-text-minimessage:4.11.0"
+
+    // spigot libraries
+    implementation 'me.lucko:commodore:2.0'
 
     // spigot and plugin hooks
     compileOnly "com.comphenix.protocol:ProtocolLib:4.8.0"
