--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -14,6 +14,7 @@ repositories {
     }
     maven { url "https://repo.dmulloy2.net/repository/public/" }
     maven { url "https://libraries.minecraft.net" }
+    maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
 }
 
 dependencies {
@@ -32,6 +33,7 @@ dependencies {
     compileOnly "com.comphenix.protocol:ProtocolLib:4.8.0"
     compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'net.luckperms:api:5.4'
+    compileOnly 'me.clip:placeholderapi:2.11.2'
 
     // utils
     implementation 'org.reflections:reflections:0.10.2'
