--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -54,5 +54,8 @@ jobs:
           tag: ${{ steps.build.outputs.value }}
           commit: main
           body: |
+            Commit:
+            ${{ github.event.head_commit.message }}
+            
             **It is not recommended you download the files from here, please use the [README Installation Guide](https://github.com/CyberedCake/CyberAPI#cyberapi=)**
           generateReleaseNotes: true
