--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,5 +57,5 @@ jobs:
             **Related Commit:**
             `${{ github.event.head_commit.message }}` [click here to view!](https://github.com/${{ github.event.repository.full_name }}/commit/${{ github.event.head_commit.id }})
             
-            **It is not recommended you download the files from here, please use the [README Installation Guide](https://github.com/${{ github.event.repository.full_name }})**
+            **It is not recommended you download the files from here, please use the [README Installation Guide](https://github.com/${{ github.event.repository.full_name }}#how-to-install-and-use)**
           generateReleaseNotes: true
