--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -58,4 +58,6 @@ jobs:
             `${{ github.event.head_commit.message }}` [click here to view!](https://github.com/${{ github.event.repository.full_name }}/commit/${{ github.event.head_commit.id }})
             
             **It is not recommended you download the files from here, please use the [README Installation Guide](https://github.com/${{ github.event.repository.full_name }}#how-to-install-and-use)**
+            
+            If you really want to though, you can [click here](https://jitpack.io/#${{ github.event.repository.full_name }}/${{ steps.build.outputs.value }}) for the JitPack link!
           generateReleaseNotes: true
