--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -55,7 +55,12 @@ jobs:
           commit: main
           body: |
             **Related Commit:**
-            `${{ github.event.head_commit.message }}` [click here to view!](https://github.com/${{ github.event.repository.full_name }}/commit/${{ github.event.head_commit.id }})
+            ```
+            ${{ github.event.head_commit.message }}
+            ```
+            [click here to view!](https://github.com/${{ github.event.repository.full_name }}/commit/${{ github.event.head_commit.id }})
+            
+            <br>
             
             **It is not recommended you download the files from here, please use the [README Installation Guide](https://github.com/${{ github.event.repository.full_name }}#how-to-install-and-use)**
             
