--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,11 @@ subprojects { Project subProject ->
     group = getGroup()
     version = this.version
 
+    java {
+        withJavadocJar()
+        withSourcesJar()
+    }
+
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
     }
@@ -84,16 +89,6 @@ subprojects { Project subProject ->
 
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
-
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
-    }
-
-    task javadocJar(type: Jar, dependsOn: javadoc) {
-        classifier = 'javadoc'
-        from javadoc.destinationDir
-    }
 
     task createProperties {
         doLast {
@@ -183,7 +178,15 @@ subprojects { Project subProject ->
     shadowJar.finalizedBy sourcesJar
     if(!subProject.getName().contains("common")) shadowJar.finalizedBy copyArtifacts
 
+    dependencies {
+        if(!subProject.getName().contains("common")) {
+            // cyberapi
+            implementation project(path: ':common', configuration: 'shadow')
+        }
+    }
+
     shadowJar {
+        archiveClassifier.set('')
         archiveName = "cyberapi-" + getProject().getName() + "-b" + build.toString() + ".jar"
 
         sourceCompatibility = javaVersion
