--- a/build.gradle
+++ b/build.gradle
@@ -165,8 +165,8 @@ subprojects { Project subProject ->
     publishing {
         publications {
             maven(MavenPublication) {
-                groupId subProject.group
-                artifactId subProject.name
+                groupId project.group
+                artifactId project.name
                 version build
 
                 from components.java
