--- a/build.gradle
+++ b/build.gradle
@@ -70,18 +70,18 @@ subprojects { Project subProject ->
         withSourcesJar()
     }
 
-    tasks.withType(JavaCompile) {
+    tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
     }
 
-    task copyArtifacts {
+    tasks.register('copyArtifacts') {
         doLast {
             def NEW_DIR = "${getRootProject().buildDir}/artifacts"
             def SRC_DIR = "${buildDir}/libs"
 
             ant.copy(todir: NEW_DIR) {
                 fileset(dir: SRC_DIR,
-                        includes:"**/cyberapi-*.jar"
+                        includes: "**/cyberapi-*.jar"
                 )
             }
         }
@@ -90,10 +90,10 @@ subprojects { Project subProject ->
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
 
-    task createProperties {
+    tasks.register('createProperties') {
         doLast {
             File file = new File(this.getBuildDir().getAbsolutePath() + File.separator + getProject().getName() + "-build.properties");
-            if(!file.exists()) {
+            if (!file.exists()) {
                 file.getParentFile().mkdirs()
                 file.createNewFile()
             }
@@ -148,9 +148,9 @@ subprojects { Project subProject ->
     }
 
     jar {
-        archiveName = "cyberapi-" + getProject().getName() + "-b" + build + ".jar"
-        sourcesJar.archiveName("cyberapi-" + getProject().getName() + "-sources-b" + build + ".jar")
-        javadocJar.archiveName("cyberapi-" + getProject().getName() + "-javadoc-b" + build + ".jar")
+        setArchiveFileName("cyberapi-" + getProject().getName() + "-b" + build + ".jar")
+        sourcesJar.setArchiveClassifier("cyberapi-" + getProject().getName() + "-sources-b" + build + ".jar")
+        javadocJar.setArchiveClassifier("cyberapi-" + getProject().getName() + "-javadoc-b" + build + ".jar")
 
         from (this.getBuildDir().getAbsolutePath() + File.separator + getProject().getName() + "-build.properties")
         manifest {
@@ -186,8 +186,7 @@ subprojects { Project subProject ->
     }
 
     shadowJar {
-        archiveClassifier.set('')
-        archiveName = "cyberapi-" + getProject().getName() + "-b" + build.toString() + ".jar"
+        archiveClassifier.set("cyberapi-" + getProject().getName() + "-b" + build.toString() + ".jar")
 
         sourceCompatibility = javaVersion
         targetCompatibility = javaVersion
