--- a/build.gradle
+++ b/build.gradle
@@ -181,7 +181,7 @@ subprojects { Project subProject ->
     dependencies {
         if(!subProject.getName().contains("common")) {
             // cyberapi
-            implementation project(path: ':common', configuration: 'shadow')
+            implementation project(path: ':common')
         }
     }
 
